plugins {
    id "java"
    id "application"
    id "org.openjfx.javafxplugin" version "0.0.13"
    id "org.beryx.jlink" version "2.26.0"
}

group "com.jmc"
version "1.0.0"
sourceCompatibility = "17"

repositories {
    mavenCentral()
    mavenLocal()
    maven { url "https://killerjmc.github.io/jmc-utils/repo" }
}

ext {
    jfoenixVersion = "9.0.10"
    jmcUtilsVersion = "3.4.1"
}

dependencies {
    implementation "com.jfoenix:jfoenix:$jfoenixVersion"
    implementation "com.jmc:jmc-utils:$jmcUtilsVersion"
}

javafx {
    version = "17.0.2"
    modules = ["javafx.controls", "javafx.fxml"]
}

application {
    mainModule = "jfxlogin"
    mainClass = "com.jmc.login.LoginApp"
    applicationDefaultJvmArgs = [
        "--add-opens=java.base/java.lang.reflect=com.jfoenix",
        "--add-opens=javafx.base/com.sun.javafx.event=com.jfoenix"
    ]
}

